policies/default-tier-policies/platform-deny.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default.platform-deny
spec:
  tier: default
  order: 1
  selector: ''
  namespaceSelector: projectcalico.org/name == "ingress-nginx"
  serviceAccountSelector: ''
  ingress:
    - action: Deny
      source: {}
      destination: {}
  egress:
    - action: Deny
      source: {}
      destination: {}
  types:
    - Ingress
    - Egress
